# rust_axum

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: update-monorepo.yml
src/: lib.rs  service.rs
src/service/app/: config.rs  connection.rs
src/service/controllers/: user_controller.rs
src/service/middlewares/: common_middlewares.rs
src/service/models/: user_model.rs
src/service/routes/: user_route.rs
