[package]
name = "sample_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
colored = { version = "2.1.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
